--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,8 +1,7 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'dbt_adventureworks'
 version: '1.0.0'
 config-version: 2
 
@@ -36,7 +35,18 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  dbt_adventureworks:
     # Applies to all files under models/example/
-    example:
+    intermediate:
+      +schema: int
+      +on_schema_change: replace
+      
+    marts:
       +materialized: table
+      +on_schema_change: replace
+      +schema: marts
+
+    staging:
+      +schema: stg
+      +on_schema_change: replace
+      erp:
