--- a/models/fonte_dado_bruto.yml
+++ b/models/fonte_dado_bruto.yml
@@ -102,3 +102,15 @@ sources:
 ##            tests: 
 ##              - unique
 ##              - not_null
+      - name: raw_api_purchase_order_header
+        columns:
+          - name: PurchaseOrderID
+            tests: 
+              - unique
+              - not_null
+      - name: raw_api_purchase_order_detail
+        columns:
+          - name: PurchaseOrderDetailID
+            tests: 
+              - unique
+              - not_null
